fuel/modules/fuel/assets/css/fuel.css
/* ... */
/* notification */
div#fuel_notification { height: 21px; border-bottom: 1px solid #ccc; background-color: #ecf1f5; text-overflow: ellipsis; overflow: hidden; position: relative; }
div.notification p, div.notification div, div.notification ul {  margin: 0; min-height: 15px; line-height: 15px; padding: 3px 0 3px 35px; list-style: none; background-repeat: no-repeat; list-style: none; }
div.notification .ico { line-height: 15px; }

/* pagination */
div#pagination { position: absolute; z-index: 1; right: 0px; top: -3px; text-align: right; padding-right: 25px; }
div#pagination a { line-height: 21px; padding: 0 3px; border: 1px solid #ccc; background-color: #f9f9f9; }
div#pagination a:hover { background-color: #fdfdfd; } 
div#pagination b { color: #fff; background-color: #4f7193; line-height: 21px; padding: 0 3px; border: 1px solid #ccc;  }

/* module description */
div#module_description { border-bottom: 1px solid #ccc; background-color: #f6f6f6; padding: 15px; }
div#module_description p { margin: 0; }

/* data table */
div#table_loader { position: absolute; top: 20px; left: 50%; margin-left: -25px; z-index: 2;}
div#data_table_container { padding: 6px 0; }
#data_table .publish_hover:hover .publish_action { display: inline; }
#data_table .publish_hover:hover .publish_text { display: none; }

table#data_table.rearrange tr:hover td { cursor: move !important; background-color: #ffe !important; }
table.data { width: 98%; margin: 0px auto; }
table.data th { padding: 0 20px 0 0; white-space: nowrap; }
table.data td { padding: 5px 20px;  border-top: 1px solid #fff; white-space: nowrap; max-width: 300px; text-overflow: ellipsis; overflow: hidden; }
table.data th.on, table.data th.on a { color: #4f7193; }
table.data th a { text-decoration: underline; }
table.data th a, table.data th span { color: #333; display: block; line-height: 22px; padding: 0 0 0 20px; width: 100%; border-left: 1px solid #fff;}
table.data th.asc a { background: transparent url(../images/th_arrow_asc.png) no-repeat 5px center; }
table.data th.desc a { background: transparent url(../images/th_arrow_desc.png) no-repeat 5px center; }
table.data th { text-align: left; }
table.data td.next_last { width: 100%; }
table.data td.actions { text-align: right; white-space: nowrap; padding-left: 5px; }
table.data tr.rowaction:hover td { background-color: #edf2f7 !important; cursor: pointer; }
/*table.data th.col1 { min-width: 200px; }*/
table.data tr.alt { background-color: #f3f3f3; }
div.nodata { text-align: center; padding: 10px 0 15px 0;}
.embedded_list_items table.data th.col1 { min-width: 0; }

/* specific data column classes */
span.publish_col { width: 100px; display: block; cursor: pointer !important; }

/* form tables */
.form { border: none; border-spacing: 0; display: table; } /* important to display as table so that the proper width can be determined with inline editing */
.form td.label { padding: 6px 15px 0 0; font-weight: bold; vertical-align: top; /*white-space: nowrap; */}
.form td.field { padding: 3px 0; white-space: nowrap; }
.form td.required { padding-top: 10px; }
.form .form td.required { display: none; }
div.more_filters { padding-left: 10px; }
div.more_filters span.label { float: left; padding-top: 6px; }
div.more_filters span.field { float: left; display: block; padding: 0 0 0 5px;  }
div.more_filters div div { float: left; margin-right: 10px; }

/* tree */
div#tree_container { padding: 16px 15px; }
div#tree_loader { position: absolute; top: 20px; left: 50%; margin-left: -25px; z-index: 2;}

/* #login */
div#login { padding: 15% 0 0 0; border: none; background-color: transparent; margin: 0 auto; }
div#login h3 { margin: 0; }
div#login h3, div#login p { color: #fff; text-align: center; }
div#login ul li { margin-left: 20px; color: #fff; }
div#login form { width: 270px; margin: 0 auto; }
div#login input { background-color: #1d1d1d; color: #fff; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; border: 2px solid #444; height: 40px;  width: 270px; padding: 0 1em; }
.login_logo { background: transparent url(../images/fuel_logo.png) no-repeat; background-size: 100%; width: 233px; height: 46px; overflow: hidden; margin: 0 auto 1.5em auto; }
div#login ::-webkit-input-placeholder {color: #999; }
div#login :-moz-placeholder { color: #999; }
div#login :-ms-input-placeholder { color:  #999; }
div#login input[type="submit"] { background: #3dbfd9 !important; color: #fff; font-size: 20px; text-shadow: none; }
div#login_notification { text-overflow: ellipsis; overflow: hidden; width: 440px; margin: auto; }
a#forgotten_pwd { text-align: center; display: block; padding-top: 15px; padding-left:20px; color: #999; }

/* assets & modal */
a.modal_close, a.asset_delete { position: absolute; left: -11px; top: -11px; z-index: 10; background: transparent url(../images/x_close.png) no-repeat center center; width: 23px; height: 23px; text-indent: -10000px; overflow:hidden; }
a.asset_delete { display: none; left: -13px; top: -2px; }
div.modal_content {  -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;background-color: #fff; width: 100%; height: 100%;/*max-height: 450px;*/ overflow: hidden; }
div.modal_content iframe { width: 100% !important; }
div.modal_content_inner { padding: 10px 20px; }

div#asset_preview { height: 275px; width: 740px; overflow: auto; text-align: center; margin: 10px 0 20px 0;}
div#asset_preview img, .img_bg { background-color: #f3f3f3; }
div.asset_select > div > div { float: left; }
div.asset_select span.label { padding: 0 5px 0 15px; }
div.asset_upload_preview { position: relative; }
div.img_crop { max-width: 400px; max-height: 200px; overflow: auto; }
div#yes_no_modal { text-align: center; margin: 0; }
div#yes_no_modal ul { float: none; }
div#yes_no_modal li { display: inline-block; margin-right: 5px; float: none;}
/* ... */

